--- a/Java정리/220708.md
+++ b/Java정리/220708.md
@@ -6,12 +6,30 @@
 	- ..\\ : 상위경로
     - getAbsolutePath(), getAbsoluteFile() : 있는 그대로의 경로 다 보여줌
     - getCanonicalPath(), getCanonicalFile() : .\\ ..\\ 해석해줌
-  - .mkdir() 
-  - FileInputStream / FileOutputStream <-바이트단위
-  - FileReader/ FileWriter <-문자단위
-  - PrintWriter / BufferedReader <-줄단위
+  - [File을 통한 생성](../workspace/220708-01_fileinout/src/Main3.java)
+    - .mkdir() : 폴더만들기
+    - .createNewFile() : 파일만들기
+  - [File을 통한 이름변경, 삭제](../workspace/220708-01_fileinout/src/Main4.java)
+    - .renameTo(File객체(경로with새이름)) 
+    - .delete()
+  - [Scanner로 System.in이 아닌 File객체 읽기](../workspace/220708-01_fileinout/src/Main5.java)
+### 외부에 있는 자원 읽고 쓰기  
+  - 바이트 단위  
+    : [FileInputStream](../workspace/220708-02_stream/src/Main2.java) / [FileOutputStream](../workspace/220708-02_stream/src/Main.java) -> [교제예제](../workspace/220708-02_stream/src/CopyFile1.java)
+  - 문자단위  
+    : FileReader / FileWriter -> [교제예제](../workspace/220708-02_stream/src/FileCopy2.java)  
+    : append설정이 파라미터로 가능
+  - 줄단위  
+    : [BufferedReader](../workspace/220708-02_stream/src/Main4.java) / [PrintWriter](../workspace/220708-02_stream/src/Main3.java)
   
-### 메모장만들기
-  - JFileChooser
-  - fileFilter
-  
+### 저장과 불러오기  [JFileChooser](../workspace/220708-03_makememo/src/Main.java)
+  - .showOpenDialog(null) / .showSaveDialog(null)  
+    : 빈 껍데기!! 실제로 열리거나 저장되는건 아니고, 어떤 버튼을 눌렀는지 어떤 파일을 선택했는지 정보를 담고있을 뿐임~
+  - .getSelectedFile()
+  - [FileFilter 클래스](../workspace/220708-03_makememo/src/T0708.java)를 이용하면 원라는 파일형식만 필터해서 보여줌
+
+---- 
+> 마무리문제  
+> 1. [로또번호 기억하기](../workspace/220708-02_stream/src/Main5.java)  
+> 2. [읽어들인 정보 가공](../workspace/220708-02_stream/src/T0708.java)
+> 3. [메모장 만들기](../workspace/220708-03_makememo/src/T0708.java)
