--- a/Java정리/220720.md
+++ b/Java정리/220720.md
@@ -1,14 +1,23 @@
-- java에서 트렉잭션주기
+- java에서 배치작업 & 트렉잭션주기
 - D:\kimhj\workspace\220720-01_batch\src\TestTransaction.java
 
 - dao를 관리하는 더 좋은 방법
 - D:\kimhj\workspace\220720-02_logicConnetionControl의 파일 3개
 
-- sql함수만들기
+- 파일을 DB에 올리고 가져오기
+- D:\kimhj\workspace\220720-03_fileondb\src\FileDB.java
+- 이진테이터 blob을 이용
+
+- AutoCloseable
+- D:\kimhj\workspace\220720-03_fileondb\src\Main.jav
+
+----
+
+- sql함수만들기 -> 함수이름으로 부름
 - D:\kimhj\SQL\src\220720_03
   - 함수만들기 허용부터 하기
   - 함수만든거 적용해보기
-- stored procedures
+- stored procedures -> call로부름
 - D:\kimhj\SQL\src\220720_04~07
 - 프로시저와 함수의 차이 img
 - D:\kimhj\SQL\src\220720_01 (실행)
@@ -18,12 +27,7 @@
   - 한번 수행한 루트는 캐시메모리가 저장되어있기 때문에 다음건 빠르게 수행가능
   - 대신 로직을 sql로 해야한다는 단점
   - 로직을 테스트 하기가 어렵다는 단점
-
-- 파일을 DB에 올리고 가져오기
-- D:\kimhj\workspace\220720-03_fileondb\src\FileDB.java
-
-- 오토클로저블
-- D:\kimhj\workspace\220720-03_fileondb\src\Main.jav
-
-- 테이블 연관관계끼리 연결시키기
+  
+- 테이블 연관관계끼리 연결시키기 & 마무리 문제
 - D:\kimhj\SQL\src\220720_02
+- D:\kimhj\SQL\src\220720_08
