21일 까지 정리

--- a/Java정리/220715.md
+++ b/Java정리/220715.md
@@ -1,14 +1,15 @@
-- jdbc는 인터페이스 -> 구현한게 driver
+- jdbc는 인터페이스 -> 이걸 구현한게 각각의 driver
 - url은 uri의 좀더 구체적인 버전
 
 ### DB연결순서
+0. 드라이버 jar파일 java build path에서 추가하기
 1. 드라이버적재 : Class.forName
-  - 각 드라이버는 DB회사마다 제공한다
-  - ![driver]()
+  - 각 드라이버는 DB회사마다 제공한다 -> DriveManager가 해당 드라이버를 인식
+  - ![driver](./img/jdbcDriver.png)
 2. 데이터베이스에 접속 : Connection 인스턴스
   - DriveManager의 getConnection메소드 사용
   - Connection conn = DriveManager.getConnection(url,id,pw);
-3. 명령어 보내기 : Statement 인스턴스
+3. 명령어 보내기 : [Statement 인스턴스](../workspace/220715-01_dbconnection/src/Main3.java)
   - Connection의 createStatement메소드 사용
   - Statement stmt = conn.createStatement();
   - .executeUpdate(select 외 명령어) -> 실행이 일어난 행 개수를 반환
@@ -29,4 +30,3 @@
 ----
 > 마무리문제  
 > : [도서관리프로그램](../workspace/220715-02_connectbyfile/src/BookManager.java)  
-> : 선생님풀이~담주에~
