--- a/Java정리/220719.md
+++ b/Java정리/220719.md
@@ -1,26 +1,20 @@
-- 선생님풀이~
-- D:\kimhj\workspace\220719-01_restaurant
+### 레스토롱프로그램 선생님 풀이~!! 
+- [RestaurantDao](../workspace/220719-01_restaurant.RestaurantDao.java) : 인터페이스
+- [RestaurantDaoImpl](../workspace/220719-01_restaurant.RestaurantDaoImpl.java) : 구현클래스
+  - PreparedStatement
+    - Statement는 상속받는 자식
+	- 변수가 들어갈 자리 ?처리한 후, setter메소드로 하나하나 처리하면 되니깐 query문에서 힘들게 문자열 합연산 할 필요 없음
+    - 한번 문자열 처리를 해서 보내니깐 sql인젝션(악의적으로 드롭같은 명령어를 파라미터로 전달되게 함)같은 공격에 대처 가능
+	- Statement와 PreparedStatement 비교
+	: Statement -> .createStatement() / .executeUpdate(query문)
+	: PreparedStatement -> .prepareStatement(query문) / 집어넣는 과정 / .executeUpdate()
+  - Batch 
+    - (접속 -> 인서트 -> 끊기) 반복 : 매번 연결했다가 끊었다 하면 힘드니깐
+    - 접속 -> (인서트) 반복 -> 끊기 : 한번에 모아놨다 연결했을 때 한번에 보냄! -> batch
+    - .executeBatch()로 실행 -> int배열로 실행결과를 반환
+- [TestRestaurantDao](../workspace/220719-01_restaurant.TestRestaurantDao.java) : 테스트클래스
 
-- RestaurantDao : 인터페이스
-- RestaurantDaoImpl : 구현클래스
-- testRestaurantDao : 테스트클래스
 
-- PreparedStatement
-  - Statemet는 상속받는 자식
-  - 문자열 합연산 어렵게 할 필요 없음
-  - 보안이 더 뛰어남
-	: sql인젝션(악의적으로 드롭같은 명령어를 파라미터로 전달되게 함)같은 공격에 대처 가능
-	: Statement와는 달리 PreparedStatement는 한번 문자열 처리를 해서 보내니깐
 
-- foreign key options (update, delete)
-  - restict = no action : 아예 안되게 막아 놓는거
-  - cascade : 따라 바뀌는거
-  - set null : null로 변경
-  
-- 여러행을 추가하기 
-  - (접속 -> 인서트 -> 끊기) 반복 : 매번 연결했다가 끊었다 하면 힘듬
-  - 접속 -> (인서트) 반복 -> 끊기 : 한번에 모아놨다 연결했을 때 한번에 보내는게 좋다 (배치 이용하기!!)
-  - append같은 기능은 어떰?
 
-객체지향의 성장과정, 자바스크립트의 등장 : https://yozm.wishket.com/magazine/detail/1396/
 
