--- a/Java정리/220720.md
+++ b/Java정리/220720.md
@@ -1,33 +1,48 @@
-- java에서 배치작업 & 트렉잭션주기
-- D:\kimhj\workspace\220720-01_batch\src\TestTransaction.java
+### [java에서 트렉잭션주기](../workspace/220720-01_batch/src/TestTransaction.java)
+- 오토커밋의 기본값은 true! -> 그래서 오류생겨도 그 전것은 commit되서 실행된거 반 안된거 반 뒤죽박죽
+- .setAutoCommit(false) : 이 메소드가 곧 transactionStart! 여기서부터 한 단위로 관리 가능
+- .commit으로 반영시키거나, .rollback으로 되돌리거나 
 
-- dao를 관리하는 더 좋은 방법
-- D:\kimhj\workspace\220720-02_logicConnetionControl의 파일 3개
-
-- 파일을 DB에 올리고 가져오기
-- D:\kimhj\workspace\220720-03_fileondb\src\FileDB.java
-- 이진테이터 blob을 이용
-
-- AutoCloseable
-- D:\kimhj\workspace\220720-03_fileondb\src\Main.jav
-
-----
-
-- sql함수만들기 -> 함수이름으로 부름
-- D:\kimhj\SQL\src\220720_03
-  - 함수만들기 허용부터 하기
-  - 함수만든거 적용해보기
-- stored procedures -> call로부름
-- D:\kimhj\SQL\src\220720_04~07
-- 프로시저와 함수의 차이 img
-- D:\kimhj\SQL\src\220720_01 (실행)
-
-- 자바에서 로직을 짜지 않고, sql에서 로직을 짜는 이유?
-  - 데이터 베이스와 가까이에 있다는 점 -> db의 장점을 물려받음 (pk, fk, uniqu..)
-  - 한번 수행한 루트는 캐시메모리가 저장되어있기 때문에 다음건 빠르게 수행가능
-  - 대신 로직을 sql로 해야한다는 단점
-  - 로직을 테스트 하기가 어렵다는 단점
+### DAO가 파라미터로 Connection 받아오기
+- DAO를 활용하는 로직 안에서, 커넥션을 열고 닫고 트렌젝션도 제어하고.. 이게 베스트!!  
+```java  
+DAO dao = new DAO; // 객체의존성  
+insert도 하고 update도 하고 deleter도 하는 기능을 가진 메소드 {  
+	커넥션 열고  
+	트렌젝션 제어 시작  
+	dao.insert(커넥션, ..., ...)  
+	dao.update(커넥션, ..., ..., ...)  
+	dao.delete(커넥션, ...)  
+	커밋  
+	예외면 롤백  
+	커넥션 닫기  
+}  
+```
+- 예시
+  - [DAO 클래스](../workspace/220720-02_logicConnetionControl/src/BookDaoParamConn.java) : dao에서부터 파라미터로 conn을 받게 만들어둬야 함
+  - [DAO를 활용하는 서비스 클래스](../workspace/220720-02_logicConnetionControl/src/BookService.java) : 한 로직에 Connection 한 번! 트렌잭션도 줌!
+  - [테스크 클래스](../workspace/220720-02_logicConnetionControl/src/TestBookService.java)
   
-- 테이블 연관관계끼리 연결시키기 & 마무리 문제
-- D:\kimhj\SQL\src\220720_02
-- D:\kimhj\SQL\src\220720_08
+### [java에서 DB에 파일 올리고 내리기](../workspace/220720-03_fileondb/src/FileDB.java)
+- 파일 올리기
+  - 테이블의 한 행 안에 들어가는건 똑같음. 단지 type이 다를 뿐
+  - 이진데이터 Blob을 이용 -> `.setBlob(물음표인덱스, new FileInputStream(new File("파일경로")));`
+  - 파일을 읽어서 코드안에 넣기만 하면 되니깐 FileInputStream을 쓴다!★
+- 파일 내려받기
+  - select문으로 가져와서 ResultSet에 담는것도 동일. 단지 type이 다를 뿐
+  ```java  
+  Blob file = .getBlob(파일이 들은 칼럼); //Blob안에 이진데이터 형태로 담겨있다  
+  InputStream is = file.getBinaryStream(); //getBinaryStream() -> Blob에서 데이터를 읽기 위한 InputStream을 반환  
+  FileOutputStream fos = new FileOutputStream(new File("다운받을 경로")); //파일을 생성 할(다운받을) 경로와 outputstream을 준비  
+  int a = 0; //InputStream은 int로 읽어내고 FileOutputStream은 int로 적어내니깐, int공간을 준비  
+  while ((a = is.read()) != -1) { //a가 -1이면 데이커의 끝이니 그만함  
+	fos.write(a); //FileOutputStream이 파일을 만듬  
+  }  
+  ```  
+
+### [AutoCloseable](../workspace/220720-03_fileondb/src/Main.java)
+- try-with-resources : `try (try가 끝날 때 자동으로 해제하고 싶은 자원들) {...}`
+- finally에서 close해주지 않아도 되며 따라서 try구절 밖에서 선언 후 null값을 주는 짓 또한 하지 않아도 됨! close시 `if != null`도 필요없음  
+- 이렇게 편한 대신, 해당 자원이 AutoCloseable을 구현하고 있어야 함
+- 내가 만들 객체도 AutoCloseable를 implements하면 Try-with-resources사용 가능
+- 참고링크 https://codechacha.com/ko/java-try-with-resources/
