--- a/Java정리/220718.md
+++ b/Java정리/220718.md
@@ -1,12 +1,13 @@
-- 도서관리프로그램 -> 선생님 풀이~!
-  - BookT 클래스
-  - BookManagerT 클래스  
+### 도서관리프로그램 선생님 풀이~!! 
+  - [BookT 클래스](../workspace/220715-02_connectbyfile/src/BookT.java)
+  - [BookManagerT 클래스](../workspace/220715-02_connectbyfile/src/BookManagerT.java)  
     - Data Access Object = DAO
-    - 기능을 가진 메소드에서, catch문을 없애고 그냥 메소드 자체에 throws 걸어줌~~
-    : 이래야 메인에서도 Exception e를 받아갈 수 있음 
-  - Ttest 클래스
-  - BookConsolApp 클래스
+    - DAO의 메소드에서, catch문을 없애고 그냥 헤더에 throws 걸어줌 -> 이래야 메인에서 Exception e를 받아갈 수 있음 
+  - [Ttest 클래스](../workspace/220715-02_connectbyfile/src/Ttest.java) 
+  - [BookConsolApp 클래스](../workspace/220715-02_connectbyfile/src/BookConsolApp.java) 
+    - BookManagerT(DAO)가 꼭 있어야 한다 -> 객체의존성
   
 ----
 > 마무리문제  
-> : 레스토랑프로그램
+> : 레스토랑프로그램  
+> [레스토랑클래스](../workspace/220718-01_database/src/Restaurant.java), [레스토랑DAO](../workspace/220718-01_database/src/RtrDB.java), [DAOtest](../workspace/220718-01_database/src/RtrTest.java)
