--- a/Java정리/220721.md
+++ b/Java정리/220721.md
@@ -1,23 +1,1 @@
-- sql views
-- D:\kimhj\SQL\src\220721_01 ~ 04
-- 가공 거친 결과테이블에 이름 붙여놓는 역할. -> 미리 저장해놓은 view를 쓰면 구구절절 길게 sql쓰지 않아도 된다
-- 실제로는 메소드 호출과 비슷하게, view에 저장된 select문을 실행 할 뿐임 but 캐시메모리에 기록되어있으니 빠르게 가능~
-- where도 붙일 수 있고, 집계함수도 되고, 조인도 되고~
-- java에서도 view를 읽을 수 있다~!
-- 조인할 때 두 테이블의 칼럼 이름이 같으면 서로 다르게 설정이 필요하다
-
-- sql 테이블 복사
-- create에 like붙이기~ 만들어진 카피본은 연습용으로 사용 가능
-- 제약사항까지도 다 동일하게 카피되지만, 행은 비어있다!! 틀만 복사된다~~
-- 데이터(행)도 들고 오려면,, -> insert into 카피테이블 (칼럼이름) select 칼럼이름 from 원본테이블;
-- 즉, values 대신에 select를 쓴다는 것!!
-- 아예 테이블 만들 때 부터 select을 데려올 수 있다 대신 제약사항은 복사 안됨
-- 임시테이블도 있다~ 
-
-- sql 새로운 관리자 등록
-- 권한주기
-
-- 테이블 데이터 외부로 빼내기
-- data export -> 라디오버튼 위에꺼는 각각 다른 파일로, 밑에꺼는 통합해서 한 파일로..
-- 체크박스 다 선택후 export
-- export한거는 복사 붙여넣기 해서 번개표시(전부실행)하면 수출했던 테이블이 수입된다~
+---- 다 sql 내용이라 자바에서 이 파일은 삭제해야함
