--- a/Java정리/220720.md
+++ b/Java정리/220720.md
@@ -3,8 +3,9 @@
 - .setAutoCommit(false) : 이 메소드가 곧 transactionStart! 여기서부터 한 단위로 관리 가능
 - .commit으로 반영시키거나, .rollback으로 되돌리거나 
 
-### DAO가 파라미터로 Connection 받아오기
-- DAO를 활용하는 로직 안에서, 커넥션을 열고 닫고 트렌젝션도 제어하고.. 이게 베스트!!  
+### DAO를 다루는 또다른 방법
+- dao는 파라미터로 Connection 받아오고,
+- dao를 활용하는 클래스에서 커넥션 열고 닫고 트렌젝션도 제어하고.. 이게 베스트!!  
 ```java  
 DAO dao = new DAO; // 객체의존성  
 insert도 하고 update도 하고 deleter도 하는 기능을 가진 메소드 {  
@@ -29,11 +30,13 @@ insert도 하고 update도 하고 deleter도 하는 기능을 가진 메소드 {
   - 이진데이터 Blob을 이용 -> `.setBlob(물음표인덱스, new FileInputStream(new File("파일경로")));`
   - 파일을 읽어서 코드안에 넣기만 하면 되니깐 FileInputStream을 쓴다!★
 - 파일 내려받기
-  - select문으로 가져와서 ResultSet에 담는것도 동일. 단지 type이 다를 뿐
+  - select문으로 가져와서 ResultSet에 담는것도 동일. 단지 type이 다를 뿐   
+
   ```java  
   Blob file = .getBlob(파일이 들은 칼럼); //Blob안에 이진데이터 형태로 담겨있다  
   InputStream is = file.getBinaryStream(); //getBinaryStream() -> Blob에서 데이터를 읽기 위한 InputStream을 반환  
   FileOutputStream fos = new FileOutputStream(new File("다운받을 경로")); //파일을 생성 할(다운받을) 경로와 outputstream을 준비  
+  
   int a = 0; //InputStream은 int로 읽어내고 FileOutputStream은 int로 적어내니깐, int공간을 준비  
   while ((a = is.read()) != -1) { //a가 -1이면 데이커의 끝이니 그만함  
 	fos.write(a); //FileOutputStream이 파일을 만듬  
